--- a/tic_tac_toe/index.html
+++ b/tic_tac_toe/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="./public/game_gaming.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>TIC-TAC-TOE</title>
   </head>
   <body>
     <header>
       <img src="/game-logo.png" alt="Tic - Tac - Game">
-      <h1>TIC TAC TOE GAME</h1>
+      <h1>PLAY TIC-TAC-TOE</h1>
     </header>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
