--- a/tic_tac_toe/index.html
+++ b/tic_tac_toe/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <img src="/game-logo.png" alt="Tic - Tac - Game">
+      <img src="/game-logo.png" alt="Tic - Tac - Game" />
       <h1>PLAY TIC-TAC-TOE</h1>
     </header>
     <div id="root"></div>
